05_Testapp-threepilars/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp-threepilars
  namespace: testapp-threepilars-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: testapp-threepilars
  template:
    metadata:
      labels:
        app: testapp-threepilars
    spec:
      containers:
      - name: testapp
        image: quay.io/rhn_support_nigsmith/testapp-threepilars:latest
        ports:
        - containerPort: 8090
          name: http
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: testapp-threepilars
  namespace: testapp-threepilars-app
  labels:
    app: testapp-threepilars
spec:
  selector:
    app: testapp-threepilars
  ports:
  - name: http
    protocol: TCP
    port: 8090
    targetPort: 8090
  type: ClusterIP
