05_Testapp-threepilars/app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: testapp-threepilars
  namespace: testapp-threepilars-app
  labels:
    app: testapp-threepilars
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: testapp-threepilars
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
